--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="personal-info-item">
                     <div class="key">
                         <p class="uppercase">
-                            Phone Number:
+                            Phone:
                         </p>
                     </div>
                     <div class="value">
