--- a/resume.html
+++ b/resume.html
@@ -49,10 +49,28 @@
     </header>
     <section class="container-fluid">
         <div class="row">
-            <div class="col-md-4 bg-color-personal-info section-column">
+            <div class="col-md-4 bg-color-work-history section-column">
                 <div class="row">
                     <div class="col-12">
-                        <h3 class="section-heading uppercase">Work History</h3>
+                        <h3 class="history-heading uppercase">Work History</h3>
+                    </div>
+                </div>
+                <div class="history-items">
+                    <div class="timeline-item" data-dates="02/2011 - 04/2017">
+                        <h4>Hospitality</h4>
+                        <p>Bartender, Waiter & Manager</p>
+                    </div>
+                    <div class="timeline-item" data-dates="04/2017 - 06/2018">
+                        <h4>Construction</h4>
+                        <p>Site Manager</p>
+                    </div>
+                    <div class="timeline-item" data-dates="06/2018 - present">
+                        <h4>Hospitality</h4>
+                        <p>Bartender & Manager</p>
+                    </div>
+                    <div class="timeline-item" data-dates="01/2023 - Present">
+                        <h4>Student at Code Institute</h4>
+                        <p>Studying Full Stack Web Developement</p>
                     </div>
                 </div>
                 
